# tankgam

./: .gitignore  CMakeLists.txt  README  README.txt  base_textures.assets  dev.assets  tank.assets
include/tankgam-gl/gl/: Shader.h  Vertex.h
include/tankgam-util/util/: Brush.h  BspBuilder.h  File.h  FileManager.h  Log.h  Plane.h
src/: CMakeLists.txt
src/core/: Client.cpp  Client.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.h  GlobalEntity.cpp  GlobalEntity.h  LocalEntity.cpp  LocalEntity.h  Menu.cpp  Menu.h  NetBuf.cpp  NetBuf.h  NetChan.cpp  NetChan.h  Physics.cpp  Physics.h  Player.cpp  Player.h  PlayerCommand.h  Renderable.cpp  Renderable.h  Server.cpp  Server.h  Thing.cpp  Thing.h  Thinker.cpp  Thinker.h  World.cpp  World.h
src/core/EntityManager/: ClientEntityManager.cpp  ClientEntityManager.h  EntityManager.cpp  EntityManager.h  ServerEntityManager.cpp  ServerEntityManager.h
src/linux/sys/: Net.cpp  Net.h  NetLoopback.cpp
src/sdl2/: main.cpp
src/sdl2/sys/: Console.cpp  Console.h  EventHandler.cpp  EventHandler.h  File.cpp  File.h  Net.cpp  Net.h  NetBuf.cpp  NetBuf.h  NetChan.cpp  NetChan.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h
src/sdl2/sys/Renderer/: Mesh.cpp  Mesh.h  Shader.h  Texture.h
src/tankgam/: CMakeLists.txt
src/tankgam-editor/: CMakeLists.txt
src/tankgam-editor/logic/: Brush.cpp  Brush.h  Common.h  Editor.cpp  Editor.h  Map.h  StdLog.cpp  StdLog.h  Viewport.cpp  Viewport.h  ViewportCamera.cpp  ViewportCamera.h  ViewportHelpers.cpp  ViewportHelpers.h  ViewportToolType.h
src/tankgam-editor/math/: Plane.cpp  Plane.h
src/tankgam-editor/qt6/: RenderWidget.cpp  RenderWidget.h  SettingsTab.cpp  SettingsTab.h  ViewportWindow.cpp  ViewportWindow.h  WorldEditor.cpp  WorldEditor.h  WorldEditorWindow.cpp  WorldEditorWindow.h  main.cpp
src/tankgam-gl/: CMakeLists.txt
src/tankgam-gl/gl/: Texture.cpp
src/tankgam-util/: CMakeLists.txt
src/tankgam-util/util/: Brush.cpp  Bsp.cpp  BspBuilder.cpp  File.cpp  FileManager.cpp  Plane.cpp
src/tankgam/core/: Client.cpp  Client.h  ClientConnectedState.cpp  ClientConnectedState.h  ClientConnectingState.cpp  ClientConnectingState.h  ClientMenuState.cpp  ClientMenuState.h  EntityManager.h  Event.cpp  IClientState.h  Menu.cpp  Net.cpp  Net.h  NetBuf.cpp  NetBuf.h  NetChan.cpp  NetChan.h  PlayerCommand.h  Server.cpp  Server.h  server.cpp
src/tankgam/core/Client/: ClientConnectedState.cpp  ClientConnectedState.h  ClientConnectingState.cpp  ClientConnectingState.h  ClientMenuState.cpp  ClientMenuState.h  Menu.cpp
src/tankgam/linux/sys/: NetLoopback.cpp  NetLoopback.h
src/tankgam/sdl2/: main.cpp
src/tankgam/sdl2/sys/: Console.cpp  Console.h  EventHandler.cpp  File.h  Net.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h
src/tankgam/sdl2/sys/Renderer/: Mesh.h  Shader.cpp  TextRenderer.cpp  Texture.cpp
src/tankgam/win32/sys/: NetLoopback.cpp  NetLoopback.h
src/win32/sys/: NetLoopback.h
tankgam/: CMakeLists.txt
tankgam-editor/: CMakeLists.txt
tankgam-editor/src/logic/: Editor.cpp  Editor.h  StdLog.cpp  StdLog.h  ViewportCamera.cpp
tankgam-editor/src/qt6/: SettingsTab.h  ViewportWindow.cpp  WorldEditorWindow.cpp
tankgam-gl/: CMakeLists.txt
tankgam-gl/src/gl/: Mesh.cpp  Shader.cpp
tankgam-util/: CMakeLists.txt
tankgam-util/include/util/: Bsp.h  Log.h  Plane.h
tankgam-util/src/util/: FileManager.cpp  Log.cpp  Plane.cpp
tankgam/src/core/: Client.cpp  Client.h  Net.cpp  Net.h  NetBuf.h  NetChan.cpp  NetChan.h  Version.h.in
tankgam/src/core/Client/: ClientConnectedState.cpp  ClientConnectedState.h  ClientConnectingState.cpp  ClientMenuState.cpp  ClientMenuState.h  IClientState.h  Menu.cpp  Menu.h
tankgam/src/linux/sys/: NetLoopback.cpp  NetLoopback.h
tankgam/src/sdl2/: main.cpp
tankgam/src/sdl2/sys/: Console.cpp  Renderer.cpp  Timer.cpp
tankgam/src/sdl2/sys/Renderer/: TextRenderer.h
tankgam/src/win32/sys/: NetLoopback.h
